--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
       <div class="calculator">
         <form>
           <div class="display">
-            <input type="text" name="display" class="exclude" />
+            <input
+              type="text"
+              name="display"
+              class="exclude"
+              inputmode="numeric"
+            />
           </div>
           <div>
             <input
@@ -86,4 +91,5 @@
       </div>
     </div>
   </body>
+  <script src="script.js"></script>
 </html>
